src/Adstacy/AppBundle/Resources/public/less/layout/site-container.less
@import "../variables.less";
@import "../mixins.less";

.open {
  > #site-menu {
    width: @site-menu-width;
  }

  > .site-content {
    margin-left: @site-menu-width;
  }
}

#site-menu {
  // @height: "calc(100% - @{navbar-height})";
  position: fixed;
  width: 0;
  height: 100%; // prevent unready height assignment
  // height: ~"@{height}";
  border-top: 3px solid @brand-primary;
  .box-shadow(~"0 1px 0 1px @{border-color}, 0 1px 5px #ddd");
  // margin-top: -2px;
  overflow: hidden;
  z-index: @zindex-navbar-fixed;
  .transition(width .5s);
  background-color: #fff;

  @media (min-width: 600px) {
    width: @site-menu-width;
  }
}

#site-menu-inner {
  position: relative;
  .more {
    color: #b00;
  }
  ul {
    margin: 0;
    padding: 0;
    list-style: none;
    a {
      font-size: 12px;
      color: #666;
      display: block;
      text-decoration: none;
      padding: 3px 20px;
      white-space: nowrap;

      &:hover {
        background-color: @gray-lighter;
      }

      .icon {
        margin-right: 5px;
      }
    }

    &:last-child {
      margin-bottom: 20px;
    }
  }
  h3 {
    font-size: 11px;
    color: #bbb;
    margin-bottom: 5px;
    font-weight: bold;
    padding: 5px 20px;
    white-space: nowrap;
    margin-top: 5px;
  }

  .current {
    a {
      background: @brand-primary;
      color: #fff;

      &:hover {
        background: @brand-primary;
        color: #fff;
      }
    }
  }
}

#site-user-menu {
  padding: 20px 20px 10px 20px;

  .name {
    line-height: 1.2;
  }

  .media-object {
    width: 32px;
    height: 32px;
  }

  a {
    font-size: 12px;
    color: @gray-light;
  }

  .name {
    display: block;
  }
}

.site-content {
  position: relative;
  margin: 15px 0 30px 0;
  width: 100%;
  min-width: 320px;
  .transition(margin-left .5s);

  @media (min-width: 600px) {
    margin-left: @site-menu-width;
    width: auto;
  }
}

.site-container {
  padding-top: @navbar-height;
  overflow: hidden;
}

.site-body {
  margin: 0 10px;

  @media (min-width: 960px) {
    float: left;
    margin: 0 30px;
    min-width: 500px;

    .panel {
      margin: 0;
      border: 0;
    }
  }
}

.site-body-bg {
  background: #fff;
  border-radius: 5px;
  box-shadow: 0 0 1px #ccc;
  border: 1px solid #ccc;
}

#favourites {
  button {
    float: right;
    margin-right: 10px;
    border: 0;
    background: none;
    &:hover {
      color: @brand-primary;
    }
  }
}

@media (min-width: 960px) {
  .site-body-full {
    width: 100%;
  }
}

